--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: devopstask04
-          image: mohamedathikr/devopstask04:latest
+          image: sanmathisedhupathi/devopstask04
           ports:
             - containerPort: 80
